--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <a href="#brands"> <span>BRANDS</span></a>
      <a href="#fashion"> <span>FASHION</span></a>
      <a href="#about"> <span>ABOUT</span></a>
+          <a><span>CART</span></a>
 </div>
 
 <!-- VIDEO-->
